--- a/share/locale/ar.po
+++ b/share/locale/ar.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-12-13 00:20+0100\n"
-"PO-Revision-Date: 2008-12-16 21:09+0200\n"
+"PO-Revision-Date: 2008-12-16 21:54+0200\n"
 "Last-Translator: Ahmad M. Zawawi <ahmad.zawawi@gmail.com>\n"
 "Language-Team: Arabic\n"
 "MIME-Version: 1.0\n"
@@ -74,7 +74,7 @@ msgstr "الهولنديه"
 #: lib/Padre/Task/PPI/FindVariableDeclaration.pm:87
 #: lib/Padre/Task/PPI/LexicalReplaceVariable.pm:137
 msgid "Current cursor does not seem to point at a variable"
-msgstr ""
+msgstr "المؤشر الحالي لا يبدو انه يوشر على متغير"
 
 #: lib/Padre/Document/Perl.pm:418
 #: lib/Padre/Document/Perl.pm:441
@@ -83,7 +83,7 @@ msgstr "تم الغاء الفحص"
 
 #: lib/Padre/Task/PPI/FindUnmatchedBrace.pm:77
 msgid "All braces appear to be matched"
-msgstr ""
+msgstr "ببدو ان كل الاقواص متماثله"
 
 #: lib/Padre/Task/PPI/FindUnmatchedBrace.pm:78
 msgid "Check Complete"
@@ -92,7 +92,7 @@ msgstr "تم الفحص"
 #: lib/Padre/Task/PPI/FindVariableDeclaration.pm:90
 #: lib/Padre/Task/PPI/LexicalReplaceVariable.pm:140
 msgid "No declaration could be found for the specified (lexical?) variable"
-msgstr ""
+msgstr "لا يوجد اعلان للمتغير (lexical?)  المطلوب"
 
 #: lib/Padre/Task/PPI/FindVariableDeclaration.pm:93
 #: lib/Padre/Task/PPI/LexicalReplaceVariable.pm:143
@@ -118,7 +118,7 @@ msgstr "اختيار ال&دليل"
 
 #: lib/Padre/Wx/Ack.pm:161
 msgid "Ack"
-msgstr ""
+msgstr "برنامج Ack"
 
 #: lib/Padre/Wx/Ack.pm:181
 msgid "Select directory"
@@ -230,11 +230,11 @@ msgstr "ا&زاله التعليق من الاسطر المختاره\tCtrl-Shif
 #: lib/Padre/Wx/Editor.pm:573
 #: lib/Padre/Wx/Menu/Window.pm:37
 msgid "&Split window"
-msgstr ""
+msgstr "تقسيم النافذة&"
 
 #: lib/Padre/Wx/MainWindow.pm:82
 msgid "(running from SVN checkout)"
-msgstr ""
+msgstr ")جاري الشغيل من  SVN checkout)"
 
 #: lib/Padre/Wx/MainWindow.pm:239
 msgid "Files"
@@ -284,7 +284,7 @@ msgstr "لا يوجد أي وثيقه مفتوحه"
 
 #: lib/Padre/Wx/MainWindow.pm:807
 msgid "No execution mode was defined for this document"
-msgstr ""
+msgstr "لا توجد طريقة تنفيذ لهذه الوثيقة"
 
 #: lib/Padre/Wx/MainWindow.pm:826
 msgid "Not a Perl document"
@@ -296,7 +296,7 @@ msgstr "رساله"
 
 #: lib/Padre/Wx/MainWindow.pm:955
 msgid "Autocompletions error"
-msgstr ""
+msgstr "خطأ في الاكمال التلقائي"
 
 #: lib/Padre/Wx/MainWindow.pm:966
 msgid "Line number:"
@@ -304,7 +304,7 @@ msgstr "رقم السطر:"
 
 #: lib/Padre/Wx/MainWindow.pm:1194
 msgid "Nothing selected. Enter what should be opened:"
-msgstr ""
+msgstr "بلا أي اختيار. ادخل ما يجب ان يفتح:"
 
 #: lib/Padre/Wx/MainWindow.pm:1195
 msgid "Open selection"
@@ -368,7 +368,7 @@ msgstr "لا توجد فروقات\n"
 
 #: lib/Padre/Wx/MainWindow.pm:1815
 msgid "Syntax Check"
-msgstr "فحص التركيب"
+msgstr "فحص بناء الجمل"
 
 #: lib/Padre/Wx/MainWindow.pm:1964
 #, perl-format
@@ -403,7 +403,7 @@ msgstr "أحرف مع مسافات: %d"
 #: lib/Padre/Wx/MainWindow.pm:2104
 #, perl-format
 msgid "Newline type: %s"
-msgstr "نوع بدايه السطر: %s"
+msgstr "نوع حرف السطر الجديد : %s"
 
 #: lib/Padre/Wx/MainWindow.pm:2105
 #, perl-format
@@ -552,7 +552,7 @@ msgstr "حقل مفقود"
 #: lib/Padre/Wx/Dialog/ModuleStart.pm:144
 #, perl-format
 msgid "%s apparantly created. Do you want to open it now?"
-msgstr ""
+msgstr "تم كتابة %s. هل تريد فتح الملف الان?"
 
 #: lib/Padre/Wx/Dialog/ModuleStart.pm:145
 msgid "Done"
@@ -757,15 +757,15 @@ msgstr "تحويل نهايه السطر الى ماكنتوش كلاسيك "
 
 #: lib/Padre/Wx/Menu/File.pm:237
 msgid "&Recent Files"
-msgstr ""
+msgstr "ملفات الا&خيره"
 
 #: lib/Padre/Wx/Menu/File.pm:242
 msgid "Open All Recent Files"
-msgstr ""
+msgstr "فتح جميع الملفات الاخيرة"
 
 #: lib/Padre/Wx/Menu/File.pm:250
 msgid "Clean Recent Files List"
-msgstr ""
+msgstr "حذف قائمه الملفات الاخيرة"
 
 #: lib/Padre/Wx/Menu/File.pm:289
 msgid "Doc Stats"
@@ -826,7 +826,7 @@ msgstr "خطأ:"
 
 #: lib/Padre/Wx/Menu/Experimental.pm:76
 msgid "Use PPI for Perl5 syntax highlighting"
-msgstr ""
+msgstr "استخدام PPI لتلوين بناء جمل Perl5"
 
 #: lib/Padre/Wx/Menu/Experimental.pm:105
 msgid "Quick Find"
@@ -842,7 +842,7 @@ msgstr "ايجاد السابق\tShift-F4"
 
 #: lib/Padre/Wx/Menu/Help.pm:41
 msgid "Context Help\tCtrl-Shift-H"
-msgstr ""
+msgstr "مساعده السياق\tCtrl-Shift-H"
 
 #: lib/Padre/Wx/Menu/Help.pm:57
 msgid "Visit the PerlMonks"
@@ -900,15 +900,15 @@ msgstr "اختيار"
 
 #: lib/Padre/Wx/Menu/Edit.pm:76
 msgid "Mark selection start\tCtrl-["
-msgstr ""
+msgstr "تحديد بدايه الاختيار\tCtrl-["
 
 #: lib/Padre/Wx/Menu/Edit.pm:86
 msgid "Mark selection end\tCtrl-]"
-msgstr ""
+msgstr "تحديد نهايه الاختيار\tCtrl-]"
 
 #: lib/Padre/Wx/Menu/Edit.pm:96
 msgid "Clear selection marks"
-msgstr ""
+msgstr "ازاله علامات الاختيار"
 
 #: lib/Padre/Wx/Menu/Edit.pm:108
 msgid "&Copy\tCtrl-C"
@@ -936,7 +936,7 @@ msgstr "ايجاد السابق\tShift-F3"
 
 #: lib/Padre/Wx/Menu/Edit.pm:177
 msgid "Ac&k"
-msgstr ""
+msgstr "برنامج Ac&k"
 
 #: lib/Padre/Wx/Menu/Edit.pm:183
 msgid "&Goto\tCtrl-G"
@@ -944,11 +944,11 @@ msgstr "&ذهاب الى\tCtrl-G"
 
 #: lib/Padre/Wx/Menu/Edit.pm:191
 msgid "&AutoComp\tCtrl-P"
-msgstr ""
+msgstr "ا&كمال تلقائي\tCtrl-P"
 
 #: lib/Padre/Wx/Menu/Edit.pm:199
 msgid "&Brace matching\tCtrl-1"
-msgstr ""
+msgstr "&تحديد القوص المماثل\tCtrl-1"
 
 #: lib/Padre/Wx/Menu/Edit.pm:207
 msgid "&Join lines\tCtrl-J"
@@ -956,7 +956,7 @@ msgstr "&دمج الاسطر\tCtrl-J"
 
 #: lib/Padre/Wx/Menu/Edit.pm:215
 msgid "Snippets\tCtrl-Shift-A"
-msgstr ""
+msgstr "قصاصات\tCtrl-Shift-A"
 
 #: lib/Padre/Wx/Menu/Edit.pm:255
 msgid "Tabs and Spaces"
@@ -1024,7 +1024,7 @@ msgstr "ذهاب الى نافذه النتائج\tAlt-O"
 
 #: lib/Padre/Wx/Menu/Window.pm:112
 msgid "GoTo Syntax Check Window\tAlt-C"
-msgstr ""
+msgstr "ذهاب الى نافذه فحص بناء الجمل\tAlt-C"
 
 #: lib/Padre/Wx/Menu/Window.pm:124
 msgid "GoTo Main Window\tAlt-M"
@@ -1040,11 +1040,11 @@ msgstr "اظهار الوظائف"
 
 #: lib/Padre/Wx/Menu/View.pm:61
 msgid "Show Syntax Check"
-msgstr "اظهار فحص التركيب"
+msgstr "اظهار فحص بناء الجمل"
 
 #: lib/Padre/Wx/Menu/View.pm:73
 msgid "Show StatusBar"
-msgstr ""
+msgstr "اظهار شريط الحاله"
 
 #: lib/Padre/Wx/Menu/View.pm:91
 msgid "Show Line Numbers"
@@ -1052,11 +1052,11 @@ msgstr "اظهار ارقام الاسطر"
 
 #: lib/Padre/Wx/Menu/View.pm:101
 msgid "Show Code Folding"
-msgstr ""
+msgstr "اظهار طي المصدر"
 
 #: lib/Padre/Wx/Menu/View.pm:111
 msgid "Show Call Tips"
-msgstr ""
+msgstr "اظهار نصائح المناداه"
 
 #: lib/Padre/Wx/Menu/View.pm:121
 msgid "Show Current Line"
@@ -1064,7 +1064,7 @@ msgstr "اظهار السطر الحالي"
 
 #: lib/Padre/Wx/Menu/View.pm:138
 msgid "Show Newlines"
-msgstr ""
+msgstr "اظهار احرف السطر الجديد  "
 
 #: lib/Padre/Wx/Menu/View.pm:148
 msgid "Show Whitespaces"
@@ -1104,7 +1104,7 @@ msgstr "اللغه"
 
 #: lib/Padre/Wx/Menu/View.pm:248
 msgid "System Default"
-msgstr ""
+msgstr "افتراضي النظام"
 
 #: lib/Padre/Wx/Menu/View.pm:285
 msgid "&Full screen\tF11"
