--- a/Padre/Changes
+++ b/Padre/Changes
@@ -1,8 +1,7 @@
 Changes for Padre.
-	Italian translation updated (SBLANDIN)
-	
-v0.21 2008.12.X
 
+    Arabic translation added (AZAWAWI)
+	Italian translation updated (SBLANDIN)
     improved Ack (FAYLAND)
     Allow selection of editor font and current line background 
         color (HJANSEN)
