add Petar to the list of contributors
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@1987 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 Changes for Padre.
 
+    Error list window for runntime errors and diagnostics (PSHANGOV)
     Arabic translation added (AZAWAWI)
-	Italian translation updated (SBLANDIN)
+    Italian translation updated (SBLANDIN)
     improved Ack (FAYLAND)
     Allow selection of editor font and current line background 
         color (HJANSEN)
