Right-click menu in margin column for code folding now has entries to fold/unfold all foldable areas
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@1990 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Changes for Padre.
 
+    Right-click menu in margin column for code folding now
+        allows to fold/unfold all foldable areas (HJANSEN)
     Error list window for runntime errors and diagnostics (PSHANGOV)
     Arabic translation added (AZAWAWI)
     Italian translation updated (SBLANDIN)
