add HTML::Lint support
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@2031 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Padre-Plugin-HTML/Changes
+++ b/Padre-Plugin-HTML/Changes
@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-HTML
 
+0.02    2008.12.18
+        add HTML::Lint
+
 0.01    Date/time
         First version, released on an unsuspecting world.
 
