[Padre::Plugin::Perl6] Updated changes.
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre-Plugin-Perl6@2057 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,2 +1,4 @@
 
-   Moving out from the Padre source code
+  Support keyword scintilla auto completion
+  Supports Perl6 highlighting via Syntax::Highlight::Perl6
+  Moving out from the Padre source code
