--- a/Task-Padre-Plugins/Changes
+++ b/Task-Padre-Plugins/Changes
@@ -1,9 +1,9 @@
 Revision history for Task-Padre-Plugins
 
 0.04
-		add Padre::Plugin::Tidy
 		add Padre::Plugin::HTMLExport
 		add Padre::Plugin::Alarm
+		etc.
 
 0.03    2008.11.12
 
