Task::Padre::Plugin::Deps 0.02
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@2078 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Task-Padre-Plugin-Deps/Changes
+++ b/Task-Padre-Plugin-Deps/Changes
@@ -1,8 +1,9 @@
 Revision history for Task-Padre-Plugin-Deps
 
 0.02
-		add Padre::Plugin::HTML::Export and Tidy
+		add Padre::Plugin::HTML::Export
 		add Padre::Plugin::Alarm
+		etc.
 
 0.01    2008.11.12
         First version, released on an unsuspecting world.
