get_command in Padre::Document::HTML
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@2085 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Padre-Plugin-HTML/Changes
+++ b/Padre-Plugin-HTML/Changes
@@ -1,7 +1,7 @@
 Revision history for Padre-Plugin-HTML
 
-0.05
-        add Padre::Document::HTML
+0.05    2008.12.19
+        add Padre::Document::HTML with get_command
 
 0.04    2008.12.19
         fix htmltidy
