--- a/Padre/Changes
+++ b/Padre/Changes
@@ -1,5 +1,6 @@
 Changes for Padre.
 
+    improved comment/uncomment_lines for HTML/XML (FAYLAND)
     Rewrote Padre::Wx::Dialog::PluginManager to interact directly with
         Padre::PluginManager (and not talk to Padre::Config) (ADAMK)
     Migrated Padre::DB to use ORLite::Migrate instead of the
