--- a/Padre-Plugin-Perl6/Changes
+++ b/Padre-Plugin-Perl6/Changes
@@ -1,4 +1,7 @@
+Changes
 
-  Support keyword scintilla auto completion
-  Supports Perl6 highlighting via Syntax::Highlight::Perl6
-  Moving out from the Padre source code
+0.01 Dec 20 2008
+_ Initial release to CPAN
+- Support keyword scintilla auto completion
+- Supports Perl6 highlighting via Syntax::Highlight::Perl6
+- Moving out from the Padre source code
