--- a/Task-Padre-Plugin-Deps/Changes
+++ b/Task-Padre-Plugin-Deps/Changes
@@ -1,5 +1,8 @@
 Revision history for Task-Padre-Plugin-Deps
 
+0.04    2008.12.20
+        add Plugin Perl6 Deps
+
 0.03    2008.12.19
         fix wrong uploaded version
 
