[Padre::Plugin::Perl6] Updated Changes
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre-Plugin-Perl6@2120 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
 Changes
 
+0.011 Dec 21 2008
+    - Source cleanup and POD fixes.
+    
 0.01 Dec 20 2008
-_ Initial release to CPAN
-- Support keyword scintilla auto completion
-- Supports Perl6 highlighting via Syntax::Highlight::Perl6
-- Moving out from the Padre source code
+    - Initial release to CPAN
+    - Support keyword scintilla auto completion
+    - Supports Perl6 highlighting via Syntax::Highlight::Perl6
+    - Moving out from the Padre source code
