from Module::Build to Module::Install
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@2146 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Task-Padre-Plugin-Deps/Changes
+++ b/Task-Padre-Plugin-Deps/Changes
@@ -1,5 +1,8 @@
 Revision history for Task-Padre-Plugin-Deps
 
+0.05    2008.12.22
+        from Module::Build to Module::Install
+
 0.04    2008.12.20
         add Plugin Perl6 Deps
 
