--- a/Padre-Plugin-Perl6/Changes
+++ b/Padre-Plugin-Perl6/Changes
@@ -1,8 +1,13 @@
 Changes
 
+0.012 Dec 22 2008
+    - Added Perl6 Syntax checking.
+    - Handled newlines for Mac/Unix and Win platforms in export feature.
+    - Added Export simple, snippet and full HTML.
+
 0.011 Dec 21 2008
     - Source cleanup and POD fixes.
-    
+
 0.01 Dec 20 2008
     - Initial release to CPAN
     - Support keyword scintilla auto completion
