--- a/Padre/Changes
+++ b/Padre/Changes
@@ -27,6 +27,7 @@ Changes for Padre.
     Improved Ack (FAYLAND)
     Allow selection of editor font and current line background 
         color (HJANSEN)
+    Hebrew translation updated (SHLOMIF)
 
 v0.21 2008.12.14
 
