upped Encode requirement to fix fatal unicode errors
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@2172 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -28,6 +28,7 @@ Changes for Padre.
     Allow selection of editor font and current line background 
         color (HJANSEN)
     Hebrew translation updated (SHLOMIF)
+    Upped Encode requirement to 2.26, fixes some fatal errors with unicode
 
 v0.21 2008.12.14
 
