--- a/Padre/Changes
+++ b/Padre/Changes
@@ -28,7 +28,8 @@ Changes for Padre.
     Allow selection of editor font and current line background 
         color (HJANSEN)
     Hebrew translation updated (SHLOMIF)
-    Upped Encode requirement to 2.26, fixes some fatal errors with unicode
+    Upped Encode requirement to 2.26, fixes some fatal errors with unicode (TEEJAY)
+    binmode fix for File::Temp" in SyntaxChecker.pm (TEEJAY)
 
 v0.21 2008.12.14
 
