Kicking off changes for 0.23
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@2209 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Changes for Padre.
 
+v0.23 ??????????
+
+    Makefile.PL tricks EU:MM into not loading every single dependency,
+        making our dependency-heavy Makefile.PL far saner (ADAMK)
+
 v0.22 2008.12.23
 
     Various Perl6 and Parrot related snippets of code and
