add a pre_process call before execution a script from Padre that allows the checking of the current file for beginner errors.
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@2214 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Changes for Padre.
 
 v0.23 ??????????
 
+    Add naive way to locate some of the annoying errors beginners
+        might make that perl does not catch. (SZABGAB)
     Makefile.PL tricks EU:MM into not loading every single dependency,
         making our dependency-heavy Makefile.PL far saner (ADAMK)
 
