[Padre::Plugin::Perl6] Updated changes and bumped Syntax::Highlight::Perl6 version requirement to 0.02961
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre-Plugin-Perl6@2235 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changes
 
+0.014 Dec 29 2008
+    - Requires Syntax::Highlight::Perl6 version 0.02961
+
 0.013 Dec 24 2008
     - Added a menu separator before About menu item in Padre::Plugin::Perl6
     - Another message typo fix in Padre::Document::Perl6
