--- a/Padre-Plugin-HTMLExport/Changes
+++ b/Padre-Plugin-HTMLExport/Changes
@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-HTMLExport
 
-0.01    Date/time
+0.02    2008.12.29
+        Fixed it to work with Padre 0.22
+
+0.01    2008.11.28
         First version, released on an unsuspecting world.
 
