--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Changes
 
 0.014 Dec 29 2008
+    - export html now asks the user if he/she wants to open the HTML in the default browser
     - Requires Syntax::Highlight::Perl6 version 0.02961
 
 0.013 Dec 24 2008
