[Task::Padre::Plugin::Deps] Bumped version to 0.06 and updated Syntax::Highlight::Perl6 to 0.02961
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@2243 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Task-Padre-Plugin-Deps/Changes
+++ b/Task-Padre-Plugin-Deps/Changes
@@ -1,5 +1,8 @@
 Revision history for Task-Padre-Plugin-Deps
 
+0.06    2008.12.29
+        Syntax::Highlight::Perl6 required version is now 0.02961
+        
 0.05    2008.12.22
         from Module::Build to Module::Install
 
@@ -10,9 +13,9 @@ Revision history for Task-Padre-Plugin-Deps
         fix wrong uploaded version
 
 0.02    2008.12.19
-		add Padre::Plugin::HTML::Export
-		add Padre::Plugin::Alarm
-		etc.
+        add Padre::Plugin::HTML::Export
+        add Padre::Plugin::Alarm
+        etc.
 
 0.01    2008.11.12
         First version, released on an unsuspecting world.
