--- a/Padre/share/locale/ar.po
+++ b/Padre/share/locale/ar.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-12-29 21:57+0100\n"
-"PO-Revision-Date: 2008-12-30 09:27+0200\n"
+"PO-Revision-Date: 2008-12-30 09:34+0200\n"
 "Last-Translator: Ahmad M. Zawawi <ahmad.zawawi@gmail.com>\n"
 "Language-Team: Arabic\n"
 "MIME-Version: 1.0\n"
@@ -25,6 +25,12 @@ msgid ""
 "List of new plugins:\n"
 "\n"
 msgstr ""
+"تم العثور على برامج مساعده جديده.\n"
+"لتعريفها وتمكينها اذهب الى\n"
+"البرامج المساعده -> مدير البرامج المساعده\n"
+"\n"
+"قائمه البرامج المساعده الجديده:\n"
+"\n"
 
 #: lib/Padre/PluginManager.pm:254
 msgid "New plugins detected"
@@ -38,7 +44,7 @@ msgstr "البرنامج المساعد:%s - فشل تحميل الوحده: %s"
 #: lib/Padre/PluginManager.pm:395
 #, perl-format
 msgid "Plugin:%s - Not compatible with Padre::Plugin API. Need to be subclass of Padre::Plugin"
-msgstr ""
+msgstr "البرنامج المساعد:%s - غير متوافق مع Padre::Plugin API. يجب ان يرث خصائص  Padre::Plugin"
 
 #: lib/Padre/PluginManager.pm:407
 #, perl-format
@@ -49,7 +55,7 @@ msgstr "البرنامج المساعد:%s - غير متوافق مع Padre::Plu
 #: lib/Padre/PluginManager.pm:439
 #, perl-format
 msgid "Plugin:%s - Not compatible with Padre::Plugin API. Need to have sub padre_interfaces"
-msgstr ""
+msgstr "البرنامج المساعد:%s - غير متوافق مع Padre::Plugin API. يجب ان يكون له  sub padre_interfaces"
 
 #: lib/Padre/PluginManager.pm:672
 #: lib/Padre/Wx/MainWindow.pm:1297
