--- a/Padre-Plugin-HTMLExport/Changes
+++ b/Padre-Plugin-HTMLExport/Changes
@@ -1,7 +1,8 @@
 Revision history for Padre-Plugin-HTMLExport
 
-0.02    2008.12.29
+0.02    2008.12.30
         Fixed it to work with Padre 0.22
+        Moved to Module::Install
 
 0.01    2008.11.28
         First version, released on an unsuspecting world.
