add spanish translation to Changes
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@2283 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -9,6 +9,7 @@ v0.23 ??????????
     Makefile.PL tricks EU:MM into not loading every single dependency,
         making our dependency-heavy Makefile.PL far saner (ADAMK)
     Portuguese (Brazilian) translation added (GARU)
+    Spanish translation added (PacoLinux)
 
 v0.22 2008.12.23
 
