Updates to the Changes file for the previous commits
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@2354 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -10,6 +10,11 @@ v0.23 ??????????
         making our dependency-heavy Makefile.PL far saner (ADAMK)
     Portuguese (Brazilian) translation added (GARU)
     Spanish translation added (PacoLinux)
+    Shutdown process now delays saving the session until after the
+        interface phase (ADAMK)
+    Shutdown process now disables all the plugins, so they have a
+        change to shut down elegantly too (ADAMK)
+    Plugins now reload correctly (ADAMK)
 
 v0.22 2008.12.23
 
